<resources
    xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Addresses</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="test_tv">ADD THIS LOCATION</string>
    <string name="test_city">New York city</string>
    <string name="enter_name">Write your location name…</string>
    <string name="test_location">1.121020102, 10020012</string>
    <string name="test_street">Ulugbek Ko\'chasi</string>
    <string name="add">Add this location</string>
    <string name="downloading">Downloading…</string>
    <string name="error">Error</string>
    <string name="something_went_wrong">Something went wrong…</string>
    <string name="locations">Found locations</string>
    <string name="success_save">Successfully saved to favorites.</string>
    <string name="is_empty">Nothing found in this location</string>
    <string name="edittext_is_empty">Location name is not written !</string>
    <string name="save">save</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="saved">Saved Locations</string>
    <string name="success_delete">Successfully deleted</string>
    <string name="do_you_want_clear">You really want to clear all ?</string>
    <string name="delete">CLEAR</string>
    <string name="success_copy">Successfully copied to clipboard.</string>
    <string name="test_map_name">Спутник</string>
    <string name="time_out">Connection time with server was very long…</string>
    <string name="boundingbox">Boundingbox</string>
    <string name="you_have_not_any_saved_location_yet">You have not any saved locations yet</string>
    <string name="nothing_delete">"Nothing to clear"</string>

</resources>