<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/layout_background">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="42dp"
        android:layout_height="2dp"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:layout_marginTop="24dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/container" />

    <EditText
        android:id="@+id/newNameEdiText"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_margin="24sp"
        android:background="@drawable/edit_text_background"
        android:elevation="2dp"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/latitudeEdiText"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_margin="24sp"
        android:background="@drawable/edit_text_background"
        android:elevation="2dp"
        android:enabled="false"
        android:hint="@string/test_city"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newNameEdiText" />

    <EditText
        android:id="@+id/longitudeEdiText"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_margin="24sp"
        android:background="@drawable/edit_text_background"
        android:elevation="2dp"
        android:enabled="false"
        android:hint="@string/test_city"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/latitudeEdiText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancelBtn"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/button_background"
        android:text="@string/cancel"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/newNameEdiText"
        app:layout_constraintTop_toBottomOf="@+id/longitudeEdiText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveBtn"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/orange"
        android:text="@string/save"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/newNameEdiText"
        app:layout_constraintTop_toBottomOf="@+id/longitudeEdiText" />

</androidx.constraintlayout.widget.ConstraintLayout>